* cowp - Search for lyrics and chords for country songs (from Brent Beardsley)
* egw - Search Ellen G. White's writings (from Brent Beardsley)
* ostk - Search Overstock.com for items (from Brent Beardsley)
* tinyurl - tinyurl.com is a link-shortening redirector (from Brent Beardsley)
* sl - Search StudyLight.org for verses and Hebrew and Greek words

Modified Searches

* ascii - added link to www asciitable com so an ascii table will pop up if no parameters are specified
* multi - added ability to have multiple searches with different arguments and allow commas in arguments
* setiq - added delay parameter
* wpfr - reset persistent parameters
* bg    - added ability to search for phrases

Enhancements

* Added InstallationDirectory property to Launcher
* Added FindSubMenu, FindMenuItem, GetMenuItemCount, InsertMenuItem, InsertSeparator, InsertSubMenu functions to MenuBuilder
* Added GetSpecialFolderLocation and GetFolders functions to Launcher
* Added GetMenuString, GetMenuItemID, EnableMenuItem, DisableMenuItem functions to MenuBuilder

Bug Fixes

* Fix for tooltips problem on scrolling menus (bug 617639)  (DQSDTools.DLL changes, version.js NOT changed to force upgrade)
* Remove HTML tags from menu item search names
* Stop indicating as '[local]' aliases defined in aliases.txt
* Sub categories and searches are now sorted properly in the help menu
* Fix for GetFiles and GetFolders in Launcher to close the FindFirstFile handle when finished so files and directories don't
  stay locked

-- What's new for 3.1.4 (October 3, 2002)

New Searches

* smlnk - smLNK is a link-shortening redirector where the URLs are as short as possible (from Jonathon Marshall)
* cjfr - Get the conjugation for a french verb
* synfr - get synonyms for a french word
* webpoll - displays a graph illustrating the timings of the objects on a web page (from Dean Wilson)
* dg - GoDaddy DynaGen Domain Search; finds intelligent variations of domain names given a word (from Glenn Carr)